--- a/bower.json
+++ b/bower.json
@@ -8,9 +8,11 @@
     "ember-data": "~1.0.0-beta.6",
     "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master",
     "ic-ajax": "~0.3.0",
-    "ember-testing-httpRespond": "~0.1.1"
+    "ember-testing-httpRespond": "~0.1.1",
+    "foundation": "~5.0.3"
   },
   "resolutions": {
-    "ember": "~1.4.0-beta.2"
+    "ember": "~1.4.0-beta.2",
+    "jquery": "~1.9.1"
   }
 }
