--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "originate": "~0.1.5",
     "loom": "~3.1.2",
     "connect-livereload": "~0.3.1",
-    "grunt-contrib-coffee": "~0.9.0"
+    "grunt-contrib-coffee": "~0.9.0",
+    "grunt-sass": "~0.10.0"
   }
 }
