--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master",
     "ic-ajax": "~0.3.0",
     "ember-testing-httpRespond": "~0.1.1",
-    "foundation": "~5.0.3"
+    "foundation": "~5.0.3",
+    "font-awesome": "~4.0.3"
   },
   "resolutions": {
     "ember": "~1.4.0-beta.2",
